prometheus-client-derive/tests/build/04-unit.stderr
error: expected string literal
 --> tests/build/04-unit.rs:9:25
  |
9 |     #[registrant(unit = bytes)]
  |                         ^^^^^
